--- a/Day 5/Task list website/index.html
+++ b/Day 5/Task list website/index.html
@@ -7,29 +7,52 @@
     <title>Task list</title>
     <!-- Custom bootstrap link -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+
+    <!-- Custom font awsome link -->
+    <script src="https://kit.fontawesome.com/54a6d42059.js" crossorigin="anonymous"></script>
+
+    <!-- Custom google fonts link -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Bangers&family=Comfortaa&family=Fredoka+One&family=Indie+Flower&family=Montserrat&family=Press+Start+2P&family=Righteous&family=Rubik+Moonrocks&display=swap" rel="stylesheet">
 </head>
 </head>
 <body style="background-image: url(./image/task-list-backgroundimage.jpg); background-size: cover  ;">
-    <div class="container">
-        <div class="card mt-5">
+    <div class="container style='font-family: 'Montserrat', sans-serif;'">
+        <div class="card mt-5 bg-light.bg-gradient" >
             <div class="card-body text-center">
               <h1 class="fs-12">Daily Planner</h1>
 
-              <div class="p-4">
+              <div class="p-4 c-white">
               <hr>
             </div>
 
             <h1 class="fs-5">My Tasks</h1>
 
-            <form >
+            <form id="form">
             <div class="input-group mb-3">
-                <input type="text" class="form-control" placeholder="Add Task" aria-label="Recipient's username" aria-describedby="button-addon2">
+                <input type="text" class="form-control" id="taskInput" placeholder="Add Task">
                 <button class="btn btn-outline-secondary" type="button" id="button-addon2">+</button>
               </div>
             </form>
 
 
-
+            <table class="table">
+                <thead>
+                  <tr>
+                    <th>Task</th>
+                    <th>Completed</th>
+                    <th>Actions</th>
+                  </tr>
+                </thead>
+                <tbody id="tb-output">
+                  <!-- <tr>
+                    <td>HTML5</td>
+                    <td>CSS3</td>
+                    <td><i class="fa-solid fa-check-to-slot"></i></td>
+                  </tr> -->
+                </tbody>
+              </table>
             </div>
         </div>
     </div>
