--- a/Day 5/Task list website/index.html
+++ b/Day 5/Task list website/index.html
@@ -13,14 +13,14 @@
 
     <!-- Custom google fonts link -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Bangers&family=Comfortaa&family=Fredoka+One&family=Indie+Flower&family=Montserrat&family=Press+Start+2P&family=Righteous&family=Rubik+Moonrocks&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans:ital@1&family=Comfortaa&family=Dosis&family=Prompt&family=Sintony&display=swap" rel="stylesheet">
 </head>
 </head>
 <body style="background-image: url(./image/task-list-backgroundimage.jpg); background-size: cover  ;">
-    <div class="container style='font-family: 'Montserrat', sans-serif;'">
-        <div class="card mt-5 bg-light.bg-gradient" >
-            <div class="card-body text-center">
+    <div class="container">
+        <div class="card mt-5" >
+            <div class="card-body text-center" >
               <h1 class="fs-12">Daily Planner</h1>
 
               <div class="p-4 c-white">
@@ -42,7 +42,7 @@
                   <tr>
                     <th>Task</th>
                     <th>Completed</th>
-                    <th>Actions</th>
+                    <th>Delete</th>
                   </tr>
                 </thead>
                 <tbody id="tb-output">
