--- a/Day 5/Task list website/index.html
+++ b/Day 5/Task list website/index.html
@@ -17,7 +17,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans:ital@1&family=Comfortaa&family=Dosis&family=Prompt&family=Sintony&display=swap" rel="stylesheet">
 </head>
 </head>
-<body style="background-image: url(./image/task-list-backgroundimage.jpg); background-size: cover  ;">
+<body>
     <div class="container">
         <div class="card mt-5" >
             <div class="card-body text-center" >
@@ -29,10 +29,10 @@
 
             <h1 class="fs-5">My Tasks</h1>
 
-            <form id="form">
+            <form id="formSubmit">
             <div class="input-group mb-3">
                 <input type="text" class="form-control" id="taskInput" placeholder="Add Task">
-                <button class="btn btn-outline-secondary" type="button" id="button-addon2">+</button>
+                <button class="btn btn-outline-secondary" type="submit" id="submitBtn">+</button>
               </div>
             </form>
 
@@ -50,7 +50,7 @@
                     <td>HTML5</td>
                     <td>CSS3</td>
                     <td><i class="fa-solid fa-check-to-slot"></i></td>
-                  </tr> -->
+                  </tr> --> 
                 </tbody>
               </table>
             </div>
